--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@
   font-family: Karla, sans-serif;
 }
 
+a {
+  color: var(--white);
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+
 body {
   background: var(--bg-color);
   color: var(--white);
@@ -25,11 +31,13 @@ body {
   overflow: hidden;
   height: 100vh;
   width: 100%;
+  font-size: 16px;
 }
 
 img {
   max-width: 100%;
-  height: auto;
+  height: 100%;
+  border-radius: inherit;
 }
 
 @font-face {
