--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,4 +2,77 @@ main {
     background: linear-gradient(127.04deg, rgba(15, 15, 15, 0.25) 2.44%, rgba(15, 15, 15, 0.0375) 2.63%, rgba(3, 77, 41, 0.25) 27.35%, rgba(3, 75, 40, 0.25) 68.88%),
 linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     width: 100%;
+    padding: 15px 30px;
+}
+
+.dashboard {
+    display: flex;
+    justify-content: space-between;
+    height: 100vh;
+
+    .sidebar {
+        background-color: var(--bg-color);
+        height: inherit;
+        position: relative;
+        top: -15px;
+        right: -40px;
+        width: 20%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .dashboard-main {
+        width:85%;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+    .dashboard-main::-webkit-scrollbar {
+        width: 0px;
+    }
+    .dashboard-main::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        border-radius: 10px;
+    }
+    .dashboard-main::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    }
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin: 20px 0;
+        font-size: 16px;
+        text-align: left;
+
+        img {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            margin-left: 20px;
+        }
+    }
+
+    th, td {
+        padding: 12px 15px;
+    }
+
+    th {
+        background-color: var(--primary-color);
+        color: #fff;
+    }
+
+    .custom {
+        background-color: var(--gray);
+        padding: 10px 20px;
+        border-radius: 12px;
+        margin-top: 10px;
+
+        h3 {
+            padding-left: 10px;
+            padding-top: 10px;
+        }
+    }
 }
