--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -177,3 +177,63 @@ linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
+
+.dir-detail {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    width: 100%;
+
+   img {
+    border-radius: 12px;
+   } 
+   .detail-1 {
+    width: 70%;
+   }
+   .detail-child {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+
+    div {
+        width: 50%;
+        height: 350px;
+        font-size: 1.5rem;
+        font-family: 700;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 30px;
+
+        img {
+            width: 90%;
+        }
+        .icon {
+            width: 24px;
+            height: 24px;
+        }
+        .Message {
+            width: 100%;
+            height: 42px;
+            font-size: 1rem;
+            font-weight: 700;
+            text-align: center;
+            background-color: var(--white);
+            
+            a {
+                color: var(--bg-color);
+            }
+        }
+    }
+    
+   }
+}
+
+.custom {
+    background-color: var(--gray);
+    padding: 10px 20px;
+    border-radius: 12px;
+    margin-top: 10px;
+}
