--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -55,3 +55,10 @@ button {
     width: 38px;
     border-radius: 50%;
 }
+
+.rounded-sm {
+    border-radius: 24px;
+    height: 34px;
+    padding: 0 30px;
+    background: linear-gradient(216.98deg, #0A9254 52.1%, #0C5736 75.89%);
+}
