--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -183,13 +183,29 @@ linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     justify-content: space-between;
     margin-top: 20px;
     width: 100%;
+    gap: 20px;
 
    img {
     border-radius: 12px;
    } 
    .detail-1 {
     width: 70%;
+    height: 90vh;
+    overflow-y: auto;
+    padding-bottom: 30px;
    }
+   .detail-1::-webkit-scrollbar {
+    width: 0px;
+    }
+    .detail-1::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        border-radius: 10px;
+    }
+    .detail-1::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    }
+   
    .detail-child {
     display: flex;
     width: 100%;
@@ -236,4 +252,79 @@ linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     padding: 10px 20px;
     border-radius: 12px;
     margin-top: 10px;
+}
+.more-detail {
+    h4 {
+        font-size: 1.5rem;
+        font-weight: 700;
+        margin-bottom: 15px;
+    }
+    .focus-area {
+        display: grid;
+        grid-template-columns: repeat(3, 150px);
+        gap: 10px;
+        margin-bottom: 30px;
+    }
+}
+.contact-list>li {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.detail-2 {
+    .child {
+        width: 320px;
+        text-align: center;
+        padding: 15px;
+
+        .button {
+            width: 40px;
+            margin: 20px auto 10px;
+        }
+        .calender {
+            margin-bottom: 10px;
+        }
+        h4 {
+            font-size: 1.125rem;
+            font-weight: 600;
+        }
+        h5 {
+            font-size: 0.9rem;
+            font-weight: 500;
+            display: flex;
+            flex-direction: column;
+            text-align: left;
+
+            span {
+                display: flex;
+                gap: 10px;
+                align-items: center;
+                margin-top: 5px;
+                font-size: 0.7rem;
+            }
+            img {
+                width: 24px;
+                height: 24px;
+            }
+        }
+    }
+}
+
+.activity-list {
+    li {
+        display: flex;
+        gap: 10px;
+        align-items: start;
+        margin: 15px 0;
+
+        .img {
+            width: 60px;
+
+            img {
+                width: 24px;
+            }
+        }
+    }
 }
